Refactor angular structure. API improvements
